forms | refactor valiation and normalization to support aysnc & sync
